--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,3 @@
 spring.application.name=api-gateway
-
-server.port=8123
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-jwt.secret=8/3vZ0b1r0OZkXn+M1oZxqK5wN5yLQ3W8fV8xZ2v1sM=
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=refresh
