--- a/authentication-service/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/authentication-service/src/main/resources/application.properties
@@ -1,12 +1,4 @@
 spring.application.name=authentication-service
 
-server.port=8093
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_service_db
-spring.datasource.username=root
-spring.datasource.password=krishna@people10
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-
-jwt.secret=8/3vZ0b1r0OZkXn+M1oZxqK5wN5yLQ3W8fV8xZ2v1sM=
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=refresh
