--- a/discovery-server/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/discovery-server/src/main/resources/application.properties
@@ -1,6 +1,3 @@
 spring.application.name=discovery-server
-server.port=8761
-
-
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=refresh
