--- a/inventory-service/inventory-service/pom.xml
+++ b/inventory-service/inventory-service/pom.xml
@@ -66,7 +66,14 @@
   <version>0.11.5</version>
   <scope>runtime</scope>
 </dependency>
-
+				<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 <dependency>
         <groupId>org.springframework.kafka</groupId>
         <artifactId>spring-kafka</artifactId>
