--- a/order-service/order-service/pom.xml
+++ b/order-service/order-service/pom.xml
@@ -124,6 +124,11 @@
     <artifactId>spring-cloud-starter-loadbalancer</artifactId>
 </dependency>
 <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+
+<dependency>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-openfeign</artifactId>
 </dependency>
